--- a/quiosco-react/package.json
+++ b/quiosco-react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
