--- a/quiosco-react/package.json
+++ b/quiosco-react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
